# AllegroCPP_Project

./: .gitignore  .gitmodules  AllegroCPP.sln  AllegroCPP.vcxproj  AllegroCPP.vcxproj.filters  CMakeLists.txt
examples/: hello_world.cpp  old_test_must_update.cpp
test/: test.cpp
